The ColorBandUserControl is now a "in-place" ColorBandEditor." The former ColorBandUserControl is now named TwoColorPanelControl. Also updated the ProjectReaderWriter and associated classes to support saving updates to the Project's ColorBandSet.

--- a/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
+++ b/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
@@ -5,11 +5,47 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MSetExplorer"
              mc:Ignorable="d" 
-             d:DesignHeight="60" d:DesignWidth="180">
+             d:DesignHeight="70" d:DesignWidth="290">
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <local:BlendStyleToIntConverter x:Key="BlendStyleToIntConverter"/>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
     <Grid>
-        <Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Canvas Name="MainCanvas" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent"/>
-        </Border>
+
+        <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  Orientation="Vertical">
+
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Width="65" Margin="5,5,11,3" FontSize="14" Text="Cut Off:" />
+                <TextBox Text="{Binding Path=SelectedColorBand.CutOff}"  Width="50" Height="21" VerticalAlignment="Center" Margin="0,5,0,3"/>
+
+                <TextBlock Width="77" Margin="8,3,5,3" FontSize="14" Text="Blend Style:" />
+
+                <!--<TextBox Text="{Binding Path=SelectedColorBand.BlendStyle}"  Width="67" VerticalAlignment="Center"/>-->
+
+                <ComboBox Width="64" Height="21" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,2,0,2"
+                            SelectedIndex="{Binding Path=SelectedColorBand.BlendStyle, Converter={StaticResource BlendStyleToIntConverter}}">
+                    <ComboBoxItem IsSelected="True">None</ComboBoxItem>
+                    <ComboBoxItem>End</ComboBoxItem>
+                    <ComboBoxItem>Next</ComboBoxItem>
+                </ComboBox>
+
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                <TextBlock Width="69" Margin="5,2,5,5" FontSize="14" Text="Start Color:" />
+                <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=SelectedColorBand.StartColor}" Width="63" Height="21" Margin="2,0,3,5"/>
+                <!--<TextBox Text="{Binding Path=SelectedColorBand.StartColor.CssColor}" Width="65" VerticalAlignment="Center"/>-->
+
+                <TextBlock Width="65" Margin="5,2,5,5" FontSize="14" Text="End Color:" />
+                <!--<TextBox Text="{Binding Path=SelectedColorBand.ActualEndColor.CssColor}"  Width="65" VerticalAlignment="Center"/>-->
+                <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=SelectedColorBand.ActualEndColor}" Width="63" Height="21" Margin="0,0,0,5"/>
+            </StackPanel>
+
+        </StackPanel>
+
+
     </Grid>
-    
 </UserControl>
