--- a/src/MSetExplorer/ColorBandSet/ColorBandSetUserControl.xaml
+++ b/src/MSetExplorer/ColorBandSet/ColorBandSetUserControl.xaml
@@ -23,7 +23,7 @@
 
         <Border Grid.Row="0" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,0,5,5">
 
-            <ListView Name="lvColorBands" ItemsSource="{Binding ColorBandSet}" IsSynchronizedWithCurrentItem="True">
+            <ListView Name="lvColorBands" ItemsSource="{Binding ColorBandSet}" IsSynchronizedWithCurrentItem="True" SelectionMode="Single">
                 <!--  SelectedItem="{Binding SelectedColorBand, Mode=TwoWay}"-->
                 <ListView.View>
                     <GridView>
@@ -53,7 +53,7 @@
                                         </DockPanel>
 
                                         <Grid Grid.Column="1" Width="110" x:Name="cDisplay" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                                            <local:ColorBandUserControl StartColor="{Binding StartColor}" EndColor="{Binding ActualEndColor}"/>
+                                            <local:TwoColorPanelControl StartColor="{Binding StartColor}" EndColor="{Binding ActualEndColor}"/>
                                         </Grid>
 
                                         <TextBlock Grid.Column="2" Width="45" Margin="2,20,2,20" TextAlignment="Right" Text="{Binding Percentage}"/>
@@ -70,37 +70,7 @@
         </Border>
 
         <Border Grid.Row="1" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <StackPanel HorizontalAlignment="Stretch" Orientation="Vertical">
-
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Width="65" Margin="5,5,11,3" FontSize="14" Text="Cut Off:" />
-                    <TextBox Text="{Binding Path=ColorBandSet/CutOff}"  Width="50" Height="21" VerticalAlignment="Center" Margin="0,5,0,3"/>
-
-                    <TextBlock Width="77" Margin="8,3,5,3" FontSize="14" Text="Blend Style:" />
-                    
-                    
-                    <!--<TextBox Text="{Binding Path=SelectedColorBand.BlendStyle}"  Width="67" VerticalAlignment="Center"/>-->
-
-                    <ComboBox Width="64" Height="21" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,2,0,2"
-                              SelectedIndex="{Binding Path=ColorBandSet/BlendStyle, Converter={StaticResource BlendStyleToIntConverter}}">
-                        <ComboBoxItem IsSelected="True">None</ComboBoxItem>
-                        <ComboBoxItem>End</ComboBoxItem>
-                        <ComboBoxItem>Next</ComboBoxItem>
-                    </ComboBox>
-
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <TextBlock Width="69" Margin="5,2,5,5" FontSize="14" Text="Start Color:" />
-                    <local:ColorBandColorUserControl ColorBandColor="{Binding Path=ColorBandSet/StartColor}" Width="63" Height="21" Margin="2,0,3,5"/>
-                    <!--<TextBox Text="{Binding Path=SelectedColorBand.StartColor.CssColor}" Width="65" VerticalAlignment="Center"/>-->
-
-                    <TextBlock Width="65" Margin="5,2,5,5" FontSize="14" Text="End Color:" />
-                    <!--<TextBox Text="{Binding Path=SelectedColorBand.ActualEndColor.CssColor}"  Width="65" VerticalAlignment="Center"/>-->
-                    <local:ColorBandColorUserControl ColorBandColor="{Binding Path=ColorBandSet/ActualEndColor}" Width="63" Height="21" Margin="0,0,0,5"/>
-                </StackPanel>
-
-            </StackPanel>
+            <local:ColorBandUserControl x:Name="clrBandDetail" />
         </Border>
 
         <Border Grid.Row="2" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,9,0,9">
