--- a/src/MSetExplorer/ColorBand/TwoColorPanelControl.xaml
+++ b/src/MSetExplorer/ColorBand/TwoColorPanelControl.xaml
@@ -1,14 +1,15 @@
-﻿<UserControl x:Class="MSetExplorer.ColorBandColorUserControl"
+﻿<UserControl x:Class="MSetExplorer.TwoColorPanelControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MSetExplorer"
              mc:Ignorable="d" 
-             d:DesignHeight="40" d:DesignWidth="80">
+             d:DesignHeight="60" d:DesignWidth="180">
     <Grid>
         <Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Canvas Name="MainCanvas" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Transparent"/>
         </Border>
     </Grid>
+    
 </UserControl>
