--- a/src/MSetExplorer/MainWindow/MainWindow.xaml
+++ b/src/MSetExplorer/MainWindow/MainWindow.xaml
@@ -105,7 +105,7 @@
             </Border>
 
             <Border Grid.Row="1" BorderThickness="0" BorderBrush="Black" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5">
-                <local:ColorBandSetUserControl x:Name="colorBandView1"></local:ColorBandSetUserControl>
+                <local:ColorBandSetUserControl x:Name="colorBandView1" Focusable="True" ></local:ColorBandSetUserControl>
             </Border>
 
         </Grid>
