--- a/src/MSetExplorer/ColorBand/ColorBandEditorDialog.xaml
+++ b/src/MSetExplorer/ColorBand/ColorBandEditorDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MSetExplorer"
         mc:Ignorable="d"
-        Title="ColorBandEditorDialog" Height="150" Width="320">
+        Title="ColorBandEditor" Height="150" Width="320">
 
     <Window.Resources>
         <ResourceDictionary>
